ID-1282 Finalize Azure Private Resource Types (#1440)
* ID-1282 Finalize Azure Private Resource Types

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1613,28 +1613,28 @@ resourceTypes = {
   private_azure_container_registry = {
     actionPatterns = {
       delete = {
-        description = "Delete this private acr"
+        description = "Delete this private azure container registry"
       }
       read_policies = {
-        description = "view all policies and policy details for this private acr"
+        description = "view all policies and policy details for this private azure container registry"
       }
-      identify = {
-        description = "use the identity that has access to this private acr"
+      pull_image = {
+        description = "pull an image from the private azure container registry"
       }
-      "share_policy::admin" = {
-        description = "change the membership of the admin policy for this private acr"
+      "share_policy::owner" = {
+        description = "change the membership of the owner policy for this private azure container registry"
       }
-      "share_policy::user" = {
-        description = "change the membership of the user policy for this private acr"
+      "share_policy::reader" = {
+        description = "change the membership of the reader policy for this private azure container registry"
       }
     }
-    ownerRoleName = "admin"
+    ownerRoleName = "owner"
     roles = {
-      admin = {
-        roleActions = ["delete", "read_policies", "use", "share_policy::admin", "share_policy::user", "identify"]
+      owner = {
+        roleActions = ["delete", "read_policies", "use", "share_policy::owner", "share_policy::reader", "pull_image"]
       }
-      user = {
-        roleActions = ["identify"]
+      reader = {
+        roleActions = ["pull_image"]
       }
     }
     allowLeaving = false
@@ -1649,54 +1649,32 @@ resourceTypes = {
       read_policies = {
         description = "view all policies and policy details for this private azure storage account"
       }
-      identify = {
-        description = "use the identity that has access to this private azure storage account"
+      read = {
+        description = "read from the private azure storage account"
       }
-      "share_policy::admin" = {
-        description = "change the membership of the admin policy for this private azure storage account"
+      write = {
+        description = "write to the private azure storage account"
       }
-      "share_policy::user" = {
-        description = "change the membership of the user policy for this private azure storage account"
+      "share_policy::owner" = {
+        description = "change the membership of the owner policy for this private azure storage account"
+      }
+      "share_policy::reader" = {
+        description = "change the membership of the reader policy for this private azure storage account"
+      }
+      "share_policy::writer" = {
+        description = "change the membership of the writer policy for this private azure storage account"
       }
     }
-    ownerRoleName = "admin"
+    ownerRoleName = "owner"
     roles = {
-      admin = {
-        roleActions = ["delete", "read_policies", "use", "share_policy::admin", "share_policy::user", "identify"]
+      owner = {
+        roleActions = ["delete", "read_policies", "share_policy::owner", "share_policy::reader", "share_policy::writer", "read", "write"]
       }
-      user = {
-        roleActions = ["identify"]
+      reader = {
+        roleActions = ["read"]
       }
-    }
-    allowLeaving = false
-    reuseIds = true
-  }
-
-  azure_managed_identity = {
-    actionPatterns = {
-      delete = {
-        description = "Delete this azure managed identity"
-      }
-      read_policies = {
-        description = "view all policies and policy details for this azure managed identity"
-      }
-      identify = {
-        description = "use the identity that has access to this azure managed identity"
-      }
-      "share_policy::admin" = {
-        description = "change the membership of the admin policy for this azure managed identity"
-      }
-      "share_policy::user" = {
-        description = "change the membership of the user policy for this azure managed identity"
-      }
-    }
-    ownerRoleName = "admin"
-    roles = {
-      admin = {
-        roleActions = ["delete", "read_policies", "use", "share_policy::admin", "share_policy::user", "identify"]
-      }
-      user = {
-        roleActions = ["identify"]
+      writer = {
+        roleActions = ["write"]
       }
     }
     allowLeaving = false
