Rename of config option to mananagedAppTypeServiceCatalog

--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -186,7 +186,7 @@ azureServices {
   allowManagedIdentityUserCreation = ${?AZURE_ALLOW_MANAGED_IDENTITY_USER_CREATION}
   azureServiceCatalogAppsEnabled = ${?AZURE_SERVICE_CATALOG_APPS_ENABLED}
   authorizedUserKey = "authorizedTerraUser";
-  kindServiceCatalog = "ServiceCatalog";
+  managedAppTypeServiceCatalog = "ServiceCatalog";
   managedAppWorkloadClientId = ${?AZURE_MANAGED_APP_WORKLOAD_CLIENT_ID}
   managedAppClientId = ${?AZURE_MANAGED_APP_CLIENT_ID}
   managedAppClientSecret = ${?AZURE_MANAGED_APP_CLIENT_SECRET}
