Move from set_parent to create_with_parent

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1351,14 +1351,14 @@ resourceTypes = {
       approve = {
         description = "Approve or reject the snapshot builder request"
       }
-      set_parent = {
-        description = "Enables setting the parent on the request object"
+      create_with_parent = {
+        description = "Enables creating the request object with a parent"
       }
     }
     ownerRoleName = "owner"
     roles = {
       owner = {
-        roleActions = ["get", "update", "delete", "set_parent"]
+        roleActions = ["get", "update", "delete", "create_with_parent"]
       }
       approver = {
         roleActions = ["get", "approve"]
