Testing create-bee failures

--- a/env/test.env
+++ b/env/test.env
@@ -1,5 +1,6 @@
 export SERVICE_ACCOUNT_ADMINS="service-admin@dev.test.firecloud.org, service-admin2@dev.test.firecloud.org"
 export AZURE_ENABLED="false"
+export CREATE_BEE_WORKFLOW_TEST="true"
 export AZURE_MANAGED_APP_CLIENT_ID="foo"
 export AZURE_MANAGED_APP_CLIENT_SECRET="foo"
 export AZURE_MANAGED_APP_TENANT_ID="foo"
