Testing create-bee failures with azureconfig update

--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -183,6 +183,7 @@ admin {
 
 azureServices {
   azureEnabled = ${?AZURE_ENABLED}
+  azureServiceCatalogAppsEnabled = ${AZURE_SERVICE_CATALOG_APPS_ENABLED}
   allowManagedIdentityUserCreation = ${?AZURE_ALLOW_MANAGED_IDENTITY_USER_CREATION}
   managedAppClientId = ${?AZURE_MANAGED_APP_CLIENT_ID}
   managedAppClientSecret = ${?AZURE_MANAGED_APP_CLIENT_SECRET}
