--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -188,9 +188,8 @@ azureServices {
   managedAppClientId = ${?AZURE_MANAGED_APP_CLIENT_ID}
   managedAppClientSecret = ${?AZURE_MANAGED_APP_CLIENT_SECRET}
   managedAppTenantId = ${?AZURE_MANAGED_APP_TENANT_ID}
-  authorizedUserKey = "authorizedTerraUser";
-  managedAppTypeServiceCatalog = "ServiceCatalog";
-  managedAppWorkloadClientId = ${?AZURE_MANAGED_APP_WORKLOAD_CLIENT_ID}
+  authorizedUserKey = "authorizedTerraUser"
+  managedAppTypeServiceCatalog = "ServiceCatalog"
   managedAppPlans = [
     {
         name = "terra-prod"
