just an idea for cbas submissions

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -172,6 +172,7 @@ resourceTypes = {
           wds-instance = ["owner"]
           kubernetes-app = ["manager"]
           kubernetes-app-shared = ["owner", "user"]
+          cbas-submission = ["reader"]
         }
       }
       application = {
@@ -188,6 +189,7 @@ resourceTypes = {
           google-project = ["pet-creator"]
           wds-instance = ["writer"]
           kubernetes-app-shared = ["user"]
+          cbas-submission = ["reader"]
         }
       }
       reader = {
@@ -198,6 +200,7 @@ resourceTypes = {
           google-project = ["pet-creator"]
           wds-instance = ["reader"]
           kubernetes-app-shared = ["user"]
+          cbas-submission = ["reader"]
         }
       }
       discoverer = {
@@ -1673,6 +1676,31 @@ resourceTypes = {
     }
     allowLeaving = false
     reuseIds = true
+  }
+
+  cbas-submission = {
+    actionPatterns = {
+      delete = {
+        description = "Delete this cbas-submission"
+      }
+      "read_policy::submitter" = {
+        description = "view the submitter policy and policy details for this cbas-submission"
+      }
+      read = {
+        description = "read from the private azure storage account"
+      }
+    }
+    ownerRoleName = "submitter"
+    roles = {
+      submitter = {
+        roleActions = ["delete", "read_policy::submitter", "read",]
+      }
+      reader = {
+        roleActions = ["read", "read_policy::submitter"]
+      }
+    }
+    allowLeaving = false
+    reuseIds = false
   }
 }
 
