allow creating with parent

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1689,11 +1689,14 @@ resourceTypes = {
       read = {
         description = "read from the private azure storage account"
       }
+      create_with_parent = {
+        description = "Enables creating the request object with a parent"
+      }
     }
     ownerRoleName = "submitter"
     roles = {
       submitter = {
-        roleActions = ["delete", "read_policy::submitter", "read",]
+        roleActions = ["delete", "read_policy::submitter", "read", "create_with_parent"]
       }
       reader = {
         roleActions = ["read", "read_policy::submitter"]
