filter by resource parent

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1680,8 +1680,8 @@ resourceTypes = {
 
   cbas-submission = {
     actionPatterns = {
-      delete = {
-        description = "Delete this cbas-submission"
+      abort = {
+        description = "Abort this cbas-submission"
       }
       "read_policy::submitter" = {
         description = "view the submitter policy and policy details for this cbas-submission"
@@ -1696,7 +1696,7 @@ resourceTypes = {
     ownerRoleName = "submitter"
     roles = {
       submitter = {
-        roleActions = ["delete", "read_policy::submitter", "read", "create_with_parent"]
+        roleActions = ["abort", "read_policy::submitter", "read", "create_with_parent"]
       }
       reader = {
         roleActions = ["read", "read_policy::submitter"]
