--- a/src/main/resources/swagger/api-docs.yaml
+++ b/src/main/resources/swagger/api-docs.yaml
@@ -1739,7 +1739,7 @@ paths:
         This endpoint is ONLY for determining the state of the user's permissions. 
         It does not take into account enabled status, or Terms of Service Compliance, nor does it take into account Auth Domains.
         To check if a user is allowed to execute an action on a resource, use /api/resources/v2/{resourceTypeName}/{resourceId}/action/{action}
-        By default, public resources are not included. Including public resources incurs a 3x cost of DB performance.
+        By default, public resources are not included. Including public resources might incur a 3x cost of DB performance.
       operationId: listResourcesV2
       parameters:
         - name: format
@@ -1783,6 +1783,15 @@ paths:
         - name: actions
           in: query
           description: Names of actions to filter on
+          required: false
+          explode: false
+          schema:
+            type: array
+            items:
+              type: string
+        - name: parentResources
+          in: query
+          description: Fully Qualified Resource IDs of parent resources to filter on. Formatted as `resourceTypeName:resourceId`.
           required: false
           explode: false
           schema:
