add ability to get creator of a resource

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -172,7 +172,7 @@ resourceTypes = {
           wds-instance = ["owner"]
           kubernetes-app = ["manager"]
           kubernetes-app-shared = ["owner", "user"]
-          cbas-submission = ["reader"]
+          cbas-submission = ["owner"]
         }
       }
       application = {
@@ -1683,23 +1683,21 @@ resourceTypes = {
       abort = {
         description = "Abort this cbas-submission"
       }
-      "read_policy::submitter" = {
-        description = "view the submitter policy and policy details for this cbas-submission"
-      }
       read = {
-        description = "read from the private azure storage account"
+        description = "read information about the submission"
       }
       create_with_parent = {
         description = "Enables creating the request object with a parent"
       }
     }
-    ownerRoleName = "submitter"
+    ownerRoleName = "owner"
     roles = {
-      submitter = {
-        roleActions = ["abort", "read_policy::submitter", "read", "create_with_parent"]
+      owner = {
+        roleActions = ["abort", "create_with_parent"]
+        includedRoles = ["reader"]
       }
       reader = {
-        roleActions = ["read", "read_policy::submitter"]
+        roleActions = ["read", "read_creator"]
       }
     }
     allowLeaving = false
