read_creator resource action

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1689,6 +1689,9 @@ resourceTypes = {
       create_with_parent = {
         description = "Enables creating the request object with a parent"
       }
+      read_creator = {
+        description = "Enables reading the creator of the resource"
+      }
     }
     ownerRoleName = "owner"
     roles = {
