workspace owners can't abort workflows

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -172,7 +172,7 @@ resourceTypes = {
           wds-instance = ["owner"]
           kubernetes-app = ["manager"]
           kubernetes-app-shared = ["owner", "user"]
-          cbas-submission = ["owner"]
+          cbas-submission = ["reader"]
         }
       }
       application = {
