--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -184,9 +184,11 @@ admin {
 azureServices {
   azureEnabled = ${?AZURE_ENABLED}
   allowManagedIdentityUserCreation = ${?AZURE_ALLOW_MANAGED_IDENTITY_USER_CREATION}
-  managedAppClientId = ${?AZURE_MANAGED_APP_CLIENT_ID}
-  managedAppClientSecret = ${?AZURE_MANAGED_APP_CLIENT_SECRET}
-  managedAppTenantId = ${?AZURE_MANAGED_APP_TENANT_ID}
+  managedAppServicePrincipal {
+    clientId = ${?AZURE_MANAGED_APP_CLIENT_ID}
+    clientSecret = ${?AZURE_MANAGED_APP_CLIENT_SECRET}
+    tenantId = ${?AZURE_MANAGED_APP_TENANT_ID}
+  }
   managedAppWorkloadClientId = ${?AZURE_MANAGED_APP_WORKLOAD_CLIENT_ID}
 
   azureServiceCatalog {
