[TOAZ-355] [TOAZ-356] Use Managed Identity auth when running Azure Control Plane, support for Service Catalog deployed Azure Managed Apps  (#1451)
* Testing create-bee failures

* Testing create-bee failures

* Testing create-bee failures

* Testing create-bee failures with azureconfig update

* Testing create-bee failures with azureconfig update

* Testing create-bee failures with azureconfig update

* Testing create-bee failures with azureconfig update

* Testing create-bee failures with azureconfig update

* Testing create-bee failures with azureconfig update

* Testing create-bee failures with azureconfig update

* doge refactor

* azure creds

---------

Co-authored-by: aaronegrant <aaronegrant@gmail.com>
Co-authored-by: Douglas Voet <dvoet@users.noreply.github.com>

--- a/env/local.env
+++ b/env/local.env
@@ -5,6 +5,8 @@ export ADMIN_SERVICE_ACCOUNT_4="src/main/resources/rendered/admin-service-accoun
 export ADMIN_SERVICE_ACCOUNT_5="src/main/resources/rendered/admin-service-account-5.json"
 export SERVICE_ACCOUNT_ADMINS="service-admin@dev.test.firecloud.org, service-admin2@dev.test.firecloud.org"
 export AZURE_ENABLED="false"
+export AZURE_SERVICE_CATALOG_APPS_ENABLED="false"
+export AZURE_MANAGED_APP_WORKLOAD_CLIENT_ID="661e243c-5ef9-4a9c-9be3-b7f5585828b3"
 export EMAIL_DOMAIN="dev.test.firecloud.org"
 export ENVIRONMENT="dev"
 export GOOGLE_APPS_DOMAIN="test.firecloud.org"
