ID-1321 Make Google Group Sync Workers Configurable

--- a/env/local.env
+++ b/env/local.env
@@ -18,6 +18,7 @@ export GOOGLE_PROJECT="broad-dsde-dev"
 export GOOGLE_PROJECT_SERVICE_ACCOUNT="broad-dsde-dev@gs-project-accounts.iam.gserviceaccount.com"
 export GOOGLE_PUB_SUB_SUBSCRIPTION="sam-group-sync-local-sub"
 export GOOGLE_PUB_SUB_TOPIC="sam-group-sync-local"
+export GOOGLE_GROUP_SYNC_WORKER_COUNT="1"
 export GOOGLE_SERVICE_ACCOUNT_DOMAIN="broad-dsde-dev.iam.gserviceaccount.com"
 export GOOGLE_SUBDOMAIN_EMAIL="google@dev.test.firecloud.org"
 export GOOGLE_DIRECTORY_API_EMAIL_1="sam-directory-admin1@test.firecloud.org"
