--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -68,6 +68,7 @@ googleServices {
     pubSubTopic = ${?GOOGLE_PUB_SUB_TOPIC}
     pubSubSubscription = ${?GOOGLE_PUB_SUB_SUBSCRIPTION}
     workerCount = 5
+    workerCount = ${?GOOGLE_GROUP_SYNC_WORKER_COUNT}
   }
   disableUsers {
     pubSubProject = ${?GOOGLE_PROJECT}
