Add delete permission to snapshot stewards on requests

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1361,7 +1361,7 @@ resourceTypes = {
         roleActions = ["get", "update", "delete", "create_with_parent"]
       }
       approver = {
-        roleActions = ["get", "approve"]
+        roleActions = ["get", "approve", "delete"]
       }
     }
     reuseIds = false
