system resource access policy creation on boot

--- a/src/test/resources/sam.conf
+++ b/src/test/resources/sam.conf
@@ -5,3 +5,25 @@ prometheus {
 admin {
   serviceAccountAdmins = ${?SERVICE_ACCOUNT_ADMINS}
 }
+
+resourceAccessPolicies {
+  resource_type_admin {
+    workspace {
+      rawls-policy {
+        memberEmails = ["rawls@test.firecloud.org"]
+        descendantPermissions = [
+          {
+            resourceTypeName = "workspace",
+            roles = ["owner"]
+          }
+        ]
+      }
+    }
+    kubernetes-app {
+      leo-policy {
+        memberEmails = ["leo@test.firecloud.org"]
+        roles = ["support"]
+      }
+    }
+  }
+}
