--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -212,6 +212,11 @@ azureServices {
         authorizedUserKey = authorizedTerraUser
       }
       {
+        name = "terra-dev-20240709"
+        publisher = "thebroadinstituteinc1615909626976"
+        authorizedUserKey = authorizedTerraUser
+      }
+      {
         name = "terra-workspace-dev-plan"
         publisher = "thebroadinstituteinc1615909626976"
         authorizedUserKey = authorizedTerraUser
