add spend-profile.read_profile action

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1102,6 +1102,9 @@ resourceTypes = {
       "read_job_result" = {
         description = "allows reading the result of a job"
       }
+      "read_profile" = {
+        description = "read spend profile"
+      }
     }
     ownerRoleName = "owner"
     roles = {
@@ -1109,19 +1112,19 @@ resourceTypes = {
         descendantRoles = {
           landing-zone = ["owner"]
         }
-        roleActions = ["update_billing_account", "update_metadata", "delete", "link", "share_policy::owner", "share_policy::user", "share_policy::pet-creator", "read_policies", "add_child", "list_children", "view_journal", "set_managed_resource_group", "create-pet", "read_spend_report", "read_job_result"]
+        roleActions = ["update_billing_account", "update_metadata", "delete", "link", "share_policy::owner", "share_policy::user", "share_policy::pet-creator", "read_policies", "add_child", "list_children", "view_journal", "set_managed_resource_group", "create-pet", "read_spend_report", "read_job_result", "read_profile"]
       }
       user = {
         descendantRoles = {
           landing-zone = ["user"]
         }
-        roleActions = ["link", "share_policy::user", "share_policy::pet-creator", "read_policy::pet-creator", "add_child", "create-pet", "read_job_result"]
+        roleActions = ["link", "share_policy::user", "share_policy::pet-creator", "read_policy::pet-creator", "add_child", "create-pet", "read_job_result", "read_profile"]
       }
       admin = {
-        roleActions = ["share_policy::owner", "read_policies", "alter_policies", "delete"]
+        roleActions = ["share_policy::owner", "read_policies", "alter_policies", "delete", "read_profile"]
       }
       pet-creator = {
-        roleActions = ["create-pet", "share_policy::pet-creator", "read_policy::pet-creator"]
+        roleActions = ["create-pet", "share_policy::pet-creator", "read_policy::pet-creator", "read_profile"]
       }
     }
     reuseIds = true
