--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -212,7 +212,7 @@ azureServices {
         authorizedUserKey = authorizedTerraUser
       }
       {
-        name = "terra-dev-20240709"
+        name = "terra-v2-prod"
         publisher = "thebroadinstituteinc1615909626976"
         authorizedUserKey = authorizedTerraUser
       }
