add spend-profile to resourceaccessprofiles

--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -290,5 +290,19 @@ resourceAccessPolicies {
         roles = ["support"]
       }
     }
+    spend-profile {
+      system {
+        memberEmails = [
+          ${?LEO_SERVICE_ACCOUNT_EMAIL}
+          ${?WSM_SERVICE_ACCOUNT_EMAIL}
+        ]
+        descendantPermissions = [
+          {
+            resourceTypeName = "spend-profile",
+            roles = ["system"]
+          }
+        ]
+      }
+    }
   }
 }
