--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -293,8 +293,8 @@ resourceAccessPolicies {
     spend-profile {
       system {
         memberEmails = [
-          ${?LEO_SERVICE_ACCOUNT_EMAIL}
-          ${?WSM_SERVICE_ACCOUNT_EMAIL}
+          ${?LEONARDO_PET_SERVICE_ACCOUNT}
+          ${?WSM_PET_SERVICE_ACCOUNT}
         ]
         descendantPermissions = [
           {
