add system role

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1126,6 +1126,9 @@ resourceTypes = {
       pet-creator = {
         roleActions = ["create-pet", "share_policy::pet-creator", "read_policy::pet-creator", "read_profile"]
       }
+      system = {
+        roleActions = ["read_profile"]
+      }
     }
     reuseIds = true
   }
