--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1124,7 +1124,7 @@ resourceTypes = {
         roleActions = ["share_policy::owner", "read_policies", "alter_policies", "delete", "read_profile"]
       }
       pet-creator = {
-        roleActions = ["create-pet", "share_policy::pet-creator", "read_policy::pet-creator", "read_profile"]
+        roleActions = ["create-pet", "share_policy::pet-creator", "read_policy::pet-creator"]
       }
       system = {
         roleActions = ["read_profile"]
