AJ-1920 Add system role for spend-profile, grant to leo and wsm (#1491)
* add spend-profile to resourceaccessprofiles
* add system role

--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -290,5 +290,19 @@ resourceAccessPolicies {
         roles = ["support"]
       }
     }
+    spend-profile {
+      system {
+        memberEmails = [
+          ${?LEONARDO_PET_SERVICE_ACCOUNT}
+          ${?WSM_PET_SERVICE_ACCOUNT}
+        ]
+        descendantPermissions = [
+          {
+            resourceTypeName = "spend-profile",
+            roles = ["system"]
+          }
+        ]
+      }
+    }
   }
 }
