roles for rawls

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -227,6 +227,9 @@ resourceTypes = {
           google-project = ["pet-creator"]
         }
       }
+      rawls = {
+        roleActions = ["read_job_result", "create_controlled_user_private", "read", "create_controlled_user_shared", "delete"]
+      }
     }
     authDomainConstrainable = true
     allowLeaving = true
@@ -390,6 +393,9 @@ resourceTypes = {
       }
       reader = {
         roleActions = ["read"]
+      }
+      rawls = {
+        roleActions = ["delete"]
       }
     }
     reuseIds = false
@@ -738,6 +744,9 @@ resourceTypes = {
           google-project = ["notebook-user"]
         }
       }
+      rawls = {
+        roleActions = ["delete"]
+      }
     }
     reuseIds = true
   }
@@ -831,6 +840,9 @@ resourceTypes = {
       manager = {
         roleActions = ["delete", "status", "read_policies"]
       }
+      rawls = {
+        roleActions = ["delete", "status"]
+      }
     }
     reuseIds = false
   }
@@ -868,6 +880,9 @@ resourceTypes = {
       }
       user = {
         roleActions = ["connect", "status"]
+      }
+      rawls = {
+        roleActions = ["delete", "status"]
       }
     }
     reuseIds = false
@@ -1128,6 +1143,9 @@ resourceTypes = {
       }
       system = {
         roleActions = ["read_profile"]
+      }
+      rawls = {
+        roleActions = ["read_job_result", "delete"]
       }
     }
     reuseIds = true
@@ -1428,6 +1446,9 @@ resourceTypes = {
         roleActions = ["delete", "list_resources", "read_policies", "set_parent"]
       }
       user = {
+        roleActions = ["list_resources"]
+      }
+      rawls = {
         roleActions = ["list_resources"]
       }
     }
