--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -265,6 +265,17 @@ resourceAccessPolicies {
         memberEmails = ${terra.support.emails}
         roles = ["support"]
       }
+      rawls {
+        memberEmails = [
+          ${?RAWLS_SERVICE_ACCOUNT}
+        ]
+        descendantPermissions = [
+          {
+            resourceTypeName = "workspace",
+            roles = ["rawls"]
+          }
+        ]
+      }
     }
     managed-group {
       support {
@@ -276,6 +287,17 @@ resourceAccessPolicies {
       support {
         memberEmails = ${terra.support.emails}
         roles = ["support"]
+      }
+      rawls {
+        memberEmails = [
+          ${?RAWLS_SERVICE_ACCOUNT}
+        ]
+        descendantPermissions = [
+          {
+            resourceTypeName = "billing-project",
+            roles = ["rawls"]
+          }
+        ]
       }
     }
     dataset {
@@ -300,6 +322,69 @@ resourceAccessPolicies {
           {
             resourceTypeName = "spend-profile",
             roles = ["system"]
+          }
+        ]
+      }
+      rawls {
+        memberEmails = [
+          ${?RAWLS_SERVICE_ACCOUNT}
+        ]
+        descendantPermissions = [
+          {
+            resourceTypeName = "spend-profile",
+            roles = ["rawls"]
+          }
+        ]
+      }
+    }
+    landing-zone {
+      rawls {
+        memberEmails = [
+          ${?RAWLS_SERVICE_ACCOUNT}
+        ]
+        descendantPermissions = [
+          {
+            resourceTypeName = "landing-zone",
+            roles = ["rawls"]
+          }
+        ]
+      }
+    }
+    controlled-application-shared-workspace-resource {
+      rawls {
+        memberEmails = [
+          ${?RAWLS_SERVICE_ACCOUNT}
+        ]
+        descendantPermissions = [
+          {
+            resourceTypeName = "controlled-application-shared-workspace-resource",
+            roles = ["rawls"]
+          }
+        ]
+      }
+    }
+    kubernetes-app {
+      rawls {
+        memberEmails = [
+          ${?RAWLS_SERVICE_ACCOUNT}
+        ]
+        descendantPermissions = [
+          {
+            resourceTypeName = "kubernetes-app",
+            roles = ["rawls"]
+          }
+        ]
+      }
+    }
+    kubernetes-app-shared {
+      rawls {
+        memberEmails = [
+          ${?RAWLS_SERVICE_ACCOUNT}
+        ]
+        descendantPermissions = [
+          {
+            resourceTypeName = "kubernetes-app-shared",
+            roles = ["rawls"]
           }
         ]
       }
