--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -272,7 +272,7 @@ resourceAccessPolicies {
         descendantPermissions = [
           {
             resourceTypeName = "workspace",
-            roles = ["rawls"]
+            roles = ["rawls", "reader"]
           }
         ]
       }
