--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -1,32 +1,39 @@
-name: Client Side Tools - Spotbugs
+name: Codacy Analysis CLI
 
-on:
-  push:
-    branches: ["*"]
-  pull_request:
-    branches: ["*"]
-  workflow_dispatch:
+on: ["push"]
 
 jobs:
-  build:
+  codacy-analysis-cli:
+    name: Codacy Analysis CLI
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
-      
+        uses: actions/checkout@main
 
-      - name: Send Client Side Tools and Coverage Results - 
-        env:
-          CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
-        run: |
-          export CODACY_CODE=$GITHUB_WORKSPACE
-          docker run \
-            --rm=true \
-            --env CODACY_CODE="$CODACY_CODE" \
-            --volume /var/run/docker.sock:/var/run/docker.sock \
-            --volume "$CODACY_CODE":"$CODACY_CODE" \
-            --volume /tmp:/tmp \
-            codacy/codacy-analysis-cli \
-              analyze --tool spotbugs --upload --project-token ${{ secrets.CODACY_PROJECT_TOKEN }} --max-allowed-issues 99999 --commit-uuid $GITHUB_SHA
+      # coursier cache action caches both coursier and sbt caches
+      - name: coursier-cache-action
+        uses: coursier/cache-action@v5
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: 17
+
+      - name: Run Scalafmt Check
+        id: scalafmtCheck
+        run: sbt scalafmtCheckAll scalafmtSbtCheck
+
+      - name: Run unit tests and generate coverage report
+        id: coverageReport
+        run: source env/test.env; sbt coverage "testOnly --" coverageReport
+
+      - name: Run Codacy Analysis CLI
+        uses: codacy/codacy-analysis-cli-action@master
+        with:
+          tool: spotbugs
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          # or
+          # api-token: ${{ secrets.CODACY_API_TOKEN }}
+          upload: true
+          max-allowed-issues: 2147483647
