--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -371,7 +371,7 @@ resourceAccessPolicies {
         descendantPermissions = [
           {
             resourceTypeName = "kubernetes-app",
-            roles = ["rawls"]
+            roles = ["manager"]
           }
         ]
       }
@@ -384,7 +384,7 @@ resourceAccessPolicies {
         descendantPermissions = [
           {
             resourceTypeName = "kubernetes-app-shared",
-            roles = ["rawls"]
+            roles = ["owner"]
           }
         ]
       }
