comments and workspace add_child

--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -371,7 +371,10 @@ resourceAccessPolicies {
         descendantPermissions = [
           {
             resourceTypeName = "kubernetes-app",
-            roles = ["manager"]
+            roles = [
+              # leo checks for creator or manager role, rawls really only needs delete and status actions
+              "manager"
+            ]
           }
         ]
       }
@@ -384,7 +387,10 @@ resourceAccessPolicies {
         descendantPermissions = [
           {
             resourceTypeName = "kubernetes-app-shared",
-            roles = ["owner"]
+            roles = [
+              # leo checks for user or owner role, rawls really only needs delete and status actions
+              "owner"
+            ]
           }
         ]
       }
