--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -228,7 +228,7 @@ resourceTypes = {
         }
       }
       rawls = {
-        roleActions = ["read_job_result", "create_controlled_user_private", "create_controlled_user_shared", "delete", "list_children"]
+        roleActions = ["read_job_result", "create_controlled_user_private", "create_controlled_user_shared", "delete", "list_children", "add_child"]
       }
     }
     authDomainConstrainable = true
