--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1139,7 +1139,12 @@ resourceTypes = {
         roleActions = ["read_profile"]
       }
       rawls = {
-        roleActions = ["read_job_result", "delete"]
+        roleActions = [
+          "read_job_result"
+          "delete"
+          # leonardo creates a pet even for a shared app
+          "create-pet"
+        ]
       }
     }
     reuseIds = true
