controlled-user-shared-workspace-resource/read

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -285,6 +285,12 @@ resourceTypes = {
       reader = {
         roleActions = ["read"]
       }
+      rawls = {
+        roleActions = [
+          # rawls needs read workspace storage containers for clone operation
+          "read"
+        ]
+      }
     }
     reuseIds = false
   }
