--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -363,6 +363,19 @@ resourceAccessPolicies {
         ]
       }
     }
+    controlled-user-shared-workspace-resource {
+      rawls {
+        memberEmails = [
+          ${?RAWLS_SERVICE_ACCOUNT}
+        ]
+        descendantPermissions = [
+          {
+            resourceTypeName = "controlled-user-shared-workspace-resource",
+            roles = ["rawls"]
+          }
+        ]
+      }
+    }
     kubernetes-app {
       rawls {
         memberEmails = [
