--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -272,7 +272,11 @@ resourceAccessPolicies {
         descendantPermissions = [
           {
             resourceTypeName = "workspace",
-            roles = ["rawls", "reader"]
+            roles = [
+              "rawls"
+              # WSM requires one of the roles in its hierarchy, discoverer is the lowest
+              "discoverer"
+            ]
           }
         ]
       }
