--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -228,7 +228,22 @@ resourceTypes = {
         }
       }
       rawls = {
-        roleActions = ["read_job_result", "create_controlled_user_private", "create_controlled_user_shared", "delete", "list_children", "add_child"]
+        roleActions = [
+          # workspace clone and delete
+          "read_job_result"
+          # workspace clone - create WDS
+          "create_controlled_user_private"
+          # workspace clone - create storage container
+          "create_controlled_user_shared"
+          # workspace delete - leo checks for this action when deleting runtimes
+          "delete"
+          # workspace delete - WSM ensures there are no children before deleting
+          "list_children"
+          # workspace clone - create WDS
+          "add_child"
+          # workspace clone - get storage container, get cloud context and spend profile id
+          "read"
+        ]
       }
     }
     authDomainConstrainable = true
@@ -287,7 +302,7 @@ resourceTypes = {
       }
       rawls = {
         roleActions = [
-          # rawls needs read workspace storage containers for clone operation
+          # workspace clone - read source workspace storage containers
           "read"
         ]
       }
@@ -401,7 +416,10 @@ resourceTypes = {
         roleActions = ["read"]
       }
       rawls = {
-        roleActions = ["delete"]
+        roleActions = [
+          # workspace delete
+          "delete"
+        ]
       }
     }
     reuseIds = false
@@ -751,7 +769,10 @@ resourceTypes = {
         }
       }
       rawls = {
-        roleActions = ["delete"]
+        roleActions = [
+          # billing project delete
+          "delete"
+        ]
       }
     }
     reuseIds = true
@@ -1146,7 +1167,9 @@ resourceTypes = {
       }
       rawls = {
         roleActions = [
+          # landing zone creation, billing project delete
           "read_job_result"
+          # billing project delete
           "delete"
           # leonardo creates a pet even for a shared app
           "create-pet"
@@ -1454,7 +1477,10 @@ resourceTypes = {
         roleActions = ["list_resources"]
       }
       rawls = {
-        roleActions = ["list_resources"]
+        roleActions = [
+          # billing project delete
+          "list_resources"
+        ]
       }
     }
     reuseIds = ${?LANDINGZONES_REUSE_IDS}
