Allow leaving billing project and spend profile

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -739,6 +739,7 @@ resourceTypes = {
         }
       }
     }
+    allowLeaving = true
     reuseIds = true
   }
   notebook-cluster = {
@@ -1130,6 +1131,7 @@ resourceTypes = {
         roleActions = ["read_profile"]
       }
     }
+    allowLeaving = true
     reuseIds = true
   }
   study = {
