--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -304,6 +304,8 @@ resourceTypes = {
         roleActions = [
           # workspace clone - read source workspace storage containers
           "read"
+          # wds clone needs to write db backup to target workspace storage container
+          "write"
         ]
       }
     }
