--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -274,8 +274,8 @@ resourceAccessPolicies {
             resourceTypeName = "workspace",
             roles = [
               "rawls"
-              # WSM requires one of the roles in its hierarchy, discoverer is the lowest
-              "discoverer"
+              # WSM requires one of the roles in its hierarchy, discoverer is the lowest but reader is the lowest that leo understands
+              "reader"
             ]
           }
         ]
