WOR-1797 roles for rawls (#1496)

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -227,6 +227,24 @@ resourceTypes = {
           google-project = ["pet-creator"]
         }
       }
+      rawls = {
+        roleActions = [
+          # workspace clone and delete
+          "read_job_result"
+          # workspace clone - create WDS
+          "create_controlled_user_private"
+          # workspace clone - create storage container
+          "create_controlled_user_shared"
+          # workspace delete - leo checks for this action when deleting runtimes
+          "delete"
+          # workspace delete - WSM ensures there are no children before deleting
+          "list_children"
+          # workspace clone - create WDS
+          "add_child"
+          # workspace clone - get storage container, get cloud context and spend profile id
+          "read"
+        ]
+      }
     }
     authDomainConstrainable = true
     allowLeaving = true
@@ -281,6 +299,14 @@ resourceTypes = {
       }
       reader = {
         roleActions = ["read"]
+      }
+      rawls = {
+        roleActions = [
+          # workspace clone - read source workspace storage containers
+          "read"
+          # wds clone needs to write db backup to target workspace storage container
+          "write"
+        ]
       }
     }
     reuseIds = false
@@ -390,6 +416,12 @@ resourceTypes = {
       }
       reader = {
         roleActions = ["read"]
+      }
+      rawls = {
+        roleActions = [
+          # workspace delete
+          "delete"
+        ]
       }
     }
     reuseIds = false
@@ -737,6 +769,12 @@ resourceTypes = {
         descendantRoles = {
           google-project = ["notebook-user"]
         }
+      }
+      rawls = {
+        roleActions = [
+          # billing project delete
+          "delete"
+        ]
       }
     }
     allowLeaving = true
@@ -1130,6 +1168,16 @@ resourceTypes = {
       system = {
         roleActions = ["read_profile"]
       }
+      rawls = {
+        roleActions = [
+          # landing zone creation, billing project delete
+          "read_job_result"
+          # billing project delete
+          "delete"
+          # leonardo creates a pet even for a shared app
+          "create-pet"
+        ]
+      }
     }
     allowLeaving = true
     reuseIds = true
@@ -1431,6 +1479,12 @@ resourceTypes = {
       }
       user = {
         roleActions = ["list_resources"]
+      }
+      rawls = {
+        roleActions = [
+          # billing project delete
+          "list_resources"
+        ]
       }
     }
     reuseIds = ${?LANDINGZONES_REUSE_IDS}
