--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -36,6 +36,9 @@ resourceTypes = {
       admin_read_summary_information = {
         description = "view summary information on resources of this resource type"
       }
+      admin_specify_acting_user = {
+        description = "specify a different user that is preforming a given action on the resource"
+      }
     }
 
     ownerRoleName = "owner"
@@ -1176,6 +1179,8 @@ resourceTypes = {
           "delete"
           # leonardo creates a pet even for a shared app
           "create-pet"
+          # able to specify the user for async processes
+          "admin_specify_acting_user"
         ]
       }
     }
