add action to correct role

--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -333,6 +333,7 @@ resourceAccessPolicies {
         memberEmails = [
           ${?RAWLS_SERVICE_ACCOUNT}
         ]
+        actions = ["admin_specify_acting_user"]
         descendantPermissions = [
           {
             resourceTypeName = "spend-profile",
