[IA-5062] Add resource access policies for Leo resource migration (#1543)
* Leo migration config

* minor

* Fix conf

* URI length exceeds the configured limit of 2048 characters

* dummy commit

* Also need read_policies

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -817,11 +817,14 @@ resourceTypes = {
       set_parent = {
         description = "set parent of notebook cluster"
       }
+      get_parent = {
+        description = "get parent of notebook cluster"
+      }
     }
     ownerRoleName = "creator"
     roles = {
       creator = {
-        roleActions = ["status", "connect", "delete", "read_policies", "stop_start", "modify", "set_parent"]
+        roleActions = ["status", "connect", "delete", "read_policies", "stop_start", "modify", "set_parent", "get_parent"]
       }
       manager = {
         roleActions = ["status", "delete", "read_policies"]
@@ -850,11 +853,14 @@ resourceTypes = {
       set_parent = {
         description = "set parent of persistent disk"
       }
+      get_parent = {
+        description = "get parent of persistent disk"
+      }
     }
     ownerRoleName = "creator"
     roles = {
       creator = {
-        roleActions = ["read", "attach", "modify", "delete", "read_policies", "set_parent"]
+        roleActions = ["read", "attach", "modify", "delete", "read_policies", "set_parent", "get_parent"]
       }
       manager = {
         roleActions = ["delete", "read", "read_policies"]
