--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -3,6 +3,9 @@ akka {
     server {
       idle-timeout = 180 s
       request-timeout = 60 s
+      parsing {
+        max-uri-length = 16k
+      }
     }
     host-connection-pool {
       max-open-requests = 16384
@@ -248,20 +251,30 @@ janitor {
   trackResourceTopicId = ${?JANITOR_TRACK_RESOURCE_TOPIC_ID}
 }
 
-terra.support.emails = [
-  // dynamically configuring lists is hard, so 10 slots are provided for support emails
-  // add more if more than 10 are ever needed
-  ${?TERRA_SUPPORT_EMAIL_0}
-  ${?TERRA_SUPPORT_EMAIL_1}
-  ${?TERRA_SUPPORT_EMAIL_2}
-  ${?TERRA_SUPPORT_EMAIL_3}
-  ${?TERRA_SUPPORT_EMAIL_4}
-  ${?TERRA_SUPPORT_EMAIL_5}
-  ${?TERRA_SUPPORT_EMAIL_6}
-  ${?TERRA_SUPPORT_EMAIL_7}
-  ${?TERRA_SUPPORT_EMAIL_8}
-  ${?TERRA_SUPPORT_EMAIL_9}
-]
+terra {
+  support.emails = [
+    // dynamically configuring lists is hard, so 10 slots are provided for support emails
+    // add more if more than 10 are ever needed
+    ${?TERRA_SUPPORT_EMAIL_0}
+    ${?TERRA_SUPPORT_EMAIL_1}
+    ${?TERRA_SUPPORT_EMAIL_2}
+    ${?TERRA_SUPPORT_EMAIL_3}
+    ${?TERRA_SUPPORT_EMAIL_4}
+    ${?TERRA_SUPPORT_EMAIL_5}
+    ${?TERRA_SUPPORT_EMAIL_6}
+    ${?TERRA_SUPPORT_EMAIL_7}
+    ${?TERRA_SUPPORT_EMAIL_8}
+    ${?TERRA_SUPPORT_EMAIL_9}
+  ]
+
+  # See https://broadworkbench.atlassian.net/browse/IA-5062
+  # These emails can be removed after the migration is complete.
+  leo.migration.emails = [
+    ${?TERRA_LEO_MIGRATION_EMAIL_0}
+    ${?TERRA_LEO_MIGRATION_EMAIL_1}
+    ${?TERRA_LEO_MIGRATION_EMAIL_2}
+  ]
+}
 
 resourceAccessPolicies {
   resource_type_admin {
@@ -281,6 +294,20 @@ resourceAccessPolicies {
               "rawls"
               # WSM requires one of the roles in its hierarchy, discoverer is the lowest but reader is the lowest that leo understands
               "reader"
+            ]
+          }
+        ]
+      }
+      # See https://broadworkbench.atlassian.net/browse/IA-5062
+      # This policy can be removed after the migration is complete.
+      leo_migration {
+        memberEmails = ${terra.leo.migration.emails}
+        descendantPermissions = [
+          {
+            resourceTypeName = "workspace",
+            actions = [
+              "read_policies",
+              "add_child"
             ]
           }
         ]
@@ -413,6 +440,56 @@ resourceAccessPolicies {
             roles = [
               # leo checks for user or owner role, rawls really only needs delete and status actions
               "owner"
+            ]
+          }
+        ]
+      }
+    }
+    notebook-cluster {
+      # See https://broadworkbench.atlassian.net/browse/IA-5062
+      # This policy can be removed after the migration is complete.
+      leo_migration {
+        memberEmails = ${terra.leo.migration.emails}
+        descendantPermissions = [
+          {
+            resourceTypeName = "notebook-cluster",
+            actions = [
+              "read_policies",
+              "get_parent",
+              "set_parent"
+            ]
+          }
+        ]
+      }
+    }
+    persistent-disk {
+      # See https://broadworkbench.atlassian.net/browse/IA-5062
+      # This policy can be removed after the migration is complete.
+      leo_migration {
+        memberEmails = ${terra.leo.migration.emails}
+        descendantPermissions = [
+          {
+            resourceTypeName = "persistent-disk",
+            actions = [
+              "read_policies",
+              "get_parent",
+              "set_parent"
+            ]
+          }
+        ]
+      }
+    }
+    google-project {
+      # See https://broadworkbench.atlassian.net/browse/IA-5062
+      # This policy can be removed after the migration is complete.
+      leo_migration {
+        memberEmails = ${terra.leo.migration.emails}
+        descendantPermissions = [
+          {
+            resourceTypeName = "google-project",
+            actions = [
+              "read_policies",
+              "add_child"
             ]
           }
         ]
