IA-5062 fix: switch to using descendent roles instead of actions (#1546)
* IA-5602 fix: use roles instead, serialize action and resource access policy additions

* Add back sam.conf

* Comment

* Language

--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -305,10 +305,7 @@ resourceAccessPolicies {
         descendantPermissions = [
           {
             resourceTypeName = "workspace",
-            actions = [
-              "read_policies",
-              "add_child"
-            ]
+            roles = ["leo_migrator"]
           }
         ]
       }
@@ -453,11 +450,7 @@ resourceAccessPolicies {
         descendantPermissions = [
           {
             resourceTypeName = "notebook-cluster",
-            actions = [
-              "read_policies",
-              "get_parent",
-              "set_parent"
-            ]
+            roles = ["leo_migrator"]
           }
         ]
       }
@@ -470,11 +463,7 @@ resourceAccessPolicies {
         descendantPermissions = [
           {
             resourceTypeName = "persistent-disk",
-            actions = [
-              "read_policies",
-              "get_parent",
-              "set_parent"
-            ]
+            roles = ["leo_migrator"]
           }
         ]
       }
@@ -487,10 +476,7 @@ resourceAccessPolicies {
         descendantPermissions = [
           {
             resourceTypeName = "google-project",
-            actions = [
-              "read_policies",
-              "add_child"
-            ]
+            roles = ["leo_migrator"]
           }
         ]
       }
