use a valid cron expression

--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -26,8 +26,7 @@
 #
 # Default: @asap
 #
-#pullRequests.frequency = "0 0 ? * 3" # every thursday on midnight
-pullRequests.frequency = "0 12 1,16 * *" # every 1st and 16th of the month at noon
+pullRequests.frequency = "0 0 ? * MON" # every monday at midnight
 
 # pullRequests.customLabels allows to add custom labels to PRs.
 # This is useful if you want to use the labels for automation (project board for example).
